--- a/style.css
+++ b/style.css
@@ -6,39 +6,44 @@ body {
 }
 
 header {
-    background-color: #92D1C3;
-    color: #fff;
+    background-color: #fff;
+    color: #8DCC98;
     padding: 10px 0;
+}
+
+.navigation-links-container{
+    float: right;
 }
 
 nav ul {
     list-style: none;
     text-align: center;
-    padding: 0;
+    margin-top: 4rem;
+   
+    
+  
 }
+
 
 nav li {
     display: inline;
     margin: 0 20px;
+   
 }
+
+
 
 nav a {
     text-decoration: none;
-    color: #fff;
+    color: #8DCC98;
     font-weight: bold;
 }
 
 .content {
-    /* max-width: 800px;
-    margin: 20px auto;
-    padding: 20px; */
-    /* background-image: "book-933280_1280.jpg"; */
-    /* background-color: #fff; */
-    /* border-radius: 5px; */
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    
 
         height: 100%;
-        background-image: url("books-1204029_1280.jpg");
+        background-image: url("images/library-bus.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -50,28 +55,41 @@ nav a {
     opacity: 0.5;
 }
 
-/* .social-banner {
-    margin: 20px;
+.about-us{
+padding:  15%;
+background-color: #fff;
+text-align: center;
+text-justify:auto;
 }
 
-.social-banner a {
-    display: inline-block;
-    margin: 0 10px;
+/* contact form section */
+.contact-form-container {
+    /* display: flex; */
+    text-align: center;
+    background-color: #8DCC98;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
-.social-banner img {
-    width: 50px;
-    height: 50px;
-} */
+#contact-form-title-text{
+padding: 5%, 0, 5%, 5%;
+color: #fff;
+}
+
 
 
 .contact-form {
-    background-color: #f9f9f9;
+    background-color: #8DCC98;
     padding: 20px;
-    border: 20px solid #ccc;
+    height: 100%;
     border-radius: 5px;
     max-width: 400px;
     margin: 0 auto;
+}
+
+.contact-details{
+    display: flex;
+    justify-content: space-between;
 }
 
 .contact-form h2 {
@@ -84,10 +102,7 @@ nav a {
     display: flex;
     flex-direction: column;
     
-}
-
-.contact-form label {
-    margin-bottom: 5px;
+    
 }
 
 .contact-form input[type="text"],
@@ -101,11 +116,12 @@ nav a {
 }
 
 .contact-form textarea {
-    resize: vertical;
+    resize:none;
 }
 
-.contact-form input[type="submit"] {
-    background-color: #3498db;
+/* submit button */
+.contact-form button[type="submit"] {
+    background-color: #E9EE0C;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -114,6 +130,9 @@ nav a {
     font-size: 18px;
 }
 
-.contact-form input[type="submit"]:hover {
-    background-color: #2374b5;
+.footer{
+    padding-top: 7%;
+    padding-bottom: 7%;
+    background-color: #E9EE0C;
+    color: #fff;
 }
